Fix spacing

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -78,6 +78,10 @@ iframe {
   min-height: 300px;
 }
 
+.gap2 {
+  gap: 1em;
+}
+
 .gap4 {
   gap: 2em;
 }
